; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_s5p-sss.c_s5p_hash_write_ctx_iv.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_s5p-sss.c_s5p_hash_write_ctx_iv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s5p_aes_dev = type { i32 }
%struct.s5p_hash_reqctx = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s5p_aes_dev*, %struct.s5p_hash_reqctx*)* @s5p_hash_write_ctx_iv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s5p_hash_write_ctx_iv(%struct.s5p_aes_dev* %0, %struct.s5p_hash_reqctx* %1) #0 {
  %3 = alloca %struct.s5p_aes_dev*, align 8
  %4 = alloca %struct.s5p_hash_reqctx*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.s5p_aes_dev* %0, %struct.s5p_aes_dev** %3, align 8
  store %struct.s5p_hash_reqctx* %1, %struct.s5p_hash_reqctx** %4, align 8
  %7 = load %struct.s5p_hash_reqctx*, %struct.s5p_hash_reqctx** %4, align 8
  %8 = getelementptr inbounds %struct.s5p_hash_reqctx, %struct.s5p_hash_reqctx* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to i32*
  store i32* %10, i32** %5, align 8
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %27, %2
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.s5p_hash_reqctx*, %struct.s5p_hash_reqctx** %4, align 8
  %14 = getelementptr inbounds %struct.s5p_hash_reqctx, %struct.s5p_hash_reqctx* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp ult i32 %12, %15
  br i1 %16, label %17, label %30

17:                                               ; preds = %11
  %18 = load %struct.s5p_aes_dev*, %struct.s5p_aes_dev** %3, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @SSS_REG_HASH_IV(i32 %19)
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = zext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @s5p_hash_write(%struct.s5p_aes_dev* %18, i32 %20, i32 %25)
  br label %27

27:                                               ; preds = %17
  %28 = load i32, i32* %6, align 4
  %29 = add i32 %28, 1
  store i32 %29, i32* %6, align 4
  br label %11

30:                                               ; preds = %11
  ret void
}

declare dso_local i32 @s5p_hash_write(%struct.s5p_aes_dev*, i32, i32) #1

declare dso_local i32 @SSS_REG_HASH_IV(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
